--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.google.firebase:firebase-database:10.0.1'
+
+    compile 'com.parse:parse-android:1.15.8'
+    compile 'com.parse:parse-livequery-android:1.0.4'
+
     testCompile 'junit:junit:4.12'
 }
 
